<resources>
    <string name="app_name">RickAndMortyApi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="go_to_back_button">Go to back Button</string>
    <string name="go_to_next_button">Go to next button</string>
    <string name="episode_no">Episode NO</string>
    <string name="aired_date">Aired Date</string>
    <string name="location_name">Location Name</string>
    <string name="location_type">Location Type</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="created_on">Created On</string>
    <string name="species">Species</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
</resources>