<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:elevation="8dp"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/cardCharDetail">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/llCharDetails">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingEnd="44dp"
                android:paddingStart="2dp"/>


            <TextView
                android:id="@+id/character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:textStyle="bold"

                android:textColor="@color/black"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingEnd="44dp"
                android:paddingStart="2dp"/>

            <TextView
                android:id="@+id/character_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"

                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingEnd="42dp"
                android:paddingStart="2dp"/>
            <TextView
                android:id="@+id/character_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"

                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingEnd="40dp"
                android:paddingStart="2dp"/>
            <TextView
                android:id="@+id/character_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"

                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Origin"
                android:textStyle="bold"
                android:paddingEnd="54dp"
                android:paddingStart="2dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/character_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"

                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_on"
                android:textStyle="bold"
                android:paddingEnd="20dp"
                android:paddingStart="2dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/character_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"

                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>


        <ImageView
            android:id="@+id/avtar_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="10dp"
            tools:srcCompat="@tools:sample/avatars" />


    </LinearLayout>
</androidx.cardview.widget.CardView>